[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/city_drawing.jpg" type="Texture" id=1]
[ext_resource path="res://resources/Menu-Selection-sound.mp3" type="AudioStream" id=2]
[ext_resource path="res://fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/ConfigurationScene.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 4 )

[node name="ConfigurationScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1444.0
margin_top = -425.407
margin_right = 476.002
margin_bottom = 854.593
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxColor" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.0
margin_right = 268.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -228.0
margin_top = 20.0
margin_right = 229.0
margin_bottom = 398.0
custom_constants/separation = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 457.0
margin_bottom = 328.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigurationTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 457.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Configuration"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 457.0
margin_bottom = 166.0

[node name="SonidoButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 58.0
margin_right = 398.0
margin_bottom = 56.0
rect_min_size = Vector2( 340, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "1. Sound"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 457.0
margin_bottom = 247.0

[node name="ResolucionButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 58.0
margin_right = 398.0
margin_bottom = 56.0
rect_min_size = Vector2( 340, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "2. Resolution"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 457.0
margin_bottom = 328.0
rect_min_size = Vector2( 320, 0 )

[node name="AccesibilidadButton" type="Button" parent="VBoxContainer/VBoxContainer/CenterContainer3"]
margin_left = 58.0
margin_right = 398.0
margin_bottom = 56.0
rect_min_size = Vector2( 340, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "3. Accessibility"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 403.0
margin_right = 457.0
margin_bottom = 459.0

[node name="VolverAlMenuButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 42.0
margin_right = 415.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "4. Go back to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer/SonidoButton" to="." method="_on_SonidoButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer2/ResolucionButton" to="." method="_on_ResolucionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer3/AccesibilidadButton" to="." method="_on_AccesibilidadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VolverAlMenuButton" to="." method="_on_VolverAlMenuButton_pressed"]
[connection signal="finished" from="SelectionSound" to="." method="_on_SelectionSound_finished"]
